<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/auth_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/ic_auth_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/vector_auth_header" />

    <LinearLayout
        android:layout_width="371dp"
        android:layout_height="562dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/auth_footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.798">

        <TextView
            android:id="@+id/auth_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/product_sans_bold"
            android:text="@string/login_heading"
            android:textColor="@color/colorBlack"
            android:textSize="80sp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/auth_header" />

        <EditText
            android:id="@+id/email1"
            android:layout_width="255dp"
            android:layout_height="47dp"
            android:layout_marginTop="60dp"
            android:autofillHints="@string/login_text_autofill_email"
            android:background="@drawable/roundedtextbox"
            android:ems="10"
            android:fontFamily="@font/product_sans_regular"
            android:hint="@string/input_email"
            android:importantForAutofill="auto"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/auth_heading"
            app:layout_constraintTop_toBottomOf="@+id/auth_heading"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/password1"
            android:layout_width="255dp"
            android:layout_height="47dp"
            android:layout_marginTop="90dp"
            android:autofillHints="@string/login_text_autofill_password"
            android:background="@drawable/roundedtextbox"
            android:ems="10"
            android:fontFamily="@font/product_sans_regular"
            android:hint="@string/input_password"
            android:importantForAutofill="auto"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/email1"
            app:layout_constraintTop_toBottomOf="@+id/email1" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="255dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:background="@drawable/roundedbutton"
            android:fontFamily="@font/product_sans_regular"
            android:onClick="onClick"
            android:shadowColor="@color/text_shadow"
            android:shadowDx="1"
            android:shadowDy="5"
            android:shadowRadius="6"
            android:text="@string/login_btn"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="@+id/password1"
            app:layout_constraintTop_toBottomOf="@+id/password1" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="0dp"
            android:fontFamily="@font/product_sans_regular"
            android:text="@string/signin_options"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="119dp"
        android:layout_height="526dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.643">

        <ImageView
            android:id="@+id/auth_logo"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:contentDescription="@string/vector_auth_logo"
            android:scaleType="fitXY"
            android:src="@drawable/ic_logo"
            tools:layout_editor_absoluteX="164dp"
            tools:layout_editor_absoluteY="-251dp" />

    </FrameLayout>

    <ImageView
        android:id="@+id/auth_footer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/ic_auth_footer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/switch_to_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:fontFamily="@font/product_sans_regular"
        android:text="@string/switch_to_register"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/auth_footer"
        app:layout_constraintStart_toStartOf="@+id/auth_footer"
        app:layout_constraintTop_toTopOf="@+id/auth_footer"
        app:layout_constraintVertical_bias="0.627" />

    <TextView
        android:id="@+id/register_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/product_sans_regular"
        android:text="@string/register_switch"
        android:textColor="@color/colorAlternateDark2"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/auth_footer"
        app:layout_constraintHorizontal_bias="0.026"
        app:layout_constraintStart_toEndOf="@+id/switch_to_register"
        app:layout_constraintTop_toTopOf="@+id/auth_footer"
        app:layout_constraintVertical_bias="0.627" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="8dp" />

</androidx.constraintlayout.widget.ConstraintLayout>